--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     })
     testImplementation 'junit:junit:4.12'
     implementation project(':LibJokes')
+    implementation project(':jokeactivity')
 }
