task tie together

--- a/build.gradle
+++ b/build.gradle
@@ -20,3 +20,27 @@ allprojects {
         google()
     }
 }
+
+/*
+* Gradle Task tie all together
+* 1. Launches the GCE local development server
+* 2. Runs all tests
+* 3. Shuts the server down again
+* */
+/*
+task androidTestTask(dependsOn: [":backend:appengineStart",
+                              ":app:connectedAndroidTest",
+                              ':backend:appengineStop']) {
+    doLast {
+        println 'androidTestTask completed'
+    }
+}*/
+task androidTestTask() {
+    dependsOn androidtest
+    doLast {
+        println 'androidTestTask completed'
+    }
+}
+
+connectedAndroidTest.dependsOn(appengineStart)
+connectedAndroidTest.finalizedBy(appengineStop)
