clean up code and tested

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@
 .DS_Store
 /build
 /captures
+.idea/gradle.xml
+.idea/misc.xml
+.idea/vcs.xml
+.idea/caches/build_file_checksums.ser
+.idea/codeStyles/Project.xml
+gradle/wrapper/gradle-wrapper.jar
