--- a/build.gradle
+++ b/build.gradle
@@ -27,20 +27,25 @@ allprojects {
 * 2. Runs all tests
 * 3. Shuts the server down again
 * */
-/*
-task androidTestTask(dependsOn: [":backend:appengineStart",
-                              ":app:connectedAndroidTest",
-                              ':backend:appengineStop']) {
-    doLast {
-        println 'androidTestTask completed'
-    }
-}*/
-task androidTestTask() {
-    dependsOn androidtest
+task runAppEngineStart(dependsOn: ":backend:appengineStart"){
+    println 'runAppEngineStart'
+}
+
+task runAndroidTest(dependsOn: ":app:connectedAndroidTest"){
+    println 'runAndroidTest'
+}
+
+task runAppEngineStop(dependsOn: ":backend:appengineStop"){
+    println 'runAppEngineStop'
+}
+
+runAndroidTest.mustRunAfter(runAppEngineStart)
+runAppEngineStop.mustRunAfter(runAndroidTest)
+
+task androidTestTask(dependsOn: [runAppEngineStart,
+                                 runAndroidTest,
+                                 runAppEngineStop]) {
     doLast {
         println 'androidTestTask completed'
     }
 }
-
-connectedAndroidTest.dependsOn(appengineStart)
-connectedAndroidTest.finalizedBy(appengineStop)
